# media-forge

./: AGENTS.md  Cargo.toml  Justfile  README.md  justfile  media-forge.desktop  vmaf
.github/workflows/: ci.yml
crates/media_forge/: Cargo.toml
crates/media_forge/src/: main.rs
crates/mf_archive/: Cargo.toml
crates/mf_archive/src/: lib.rs
crates/mf_core/: Cargo.toml
crates/mf_core/src/: lib.rs
crates/mf_image/: Cargo.toml
crates/mf_image/src/: archive.rs  convert.rs  lib.rs
crates/mf_main/: Cargo.toml
crates/mf_main/src/: main.rs
crates/mf_video/: Cargo.toml
crates/mf_video/src/: encode.rs  lib.rs  quality.rs
src/: constants.rs  lib.rs  main.rs  ui.rs  walker.rs
src/image/: archive.rs  convert.rs  mod.rs  quality.rs  report.rs
src/video/: builder.rs  encode.rs  mod.rs  quality.rs
tests/: archive_create.rs  image_convert.rs
