[package]
name = "media-forge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "media-forge"
path = "src/main.rs"

[lib]
name = "media_forge"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
ctrlc = "3.4"
image = { version = "0.25", features = ["avif", "avif-native", "bmp", "jpeg", "png", "tiff", "webp"] }
indicatif = { version = "0.18", features = ["rayon"] }
mimalloc = { version = "0.1", features = ["v3"] }
natord = "1.0"
num_cpus = "1.17"
once_cell = "1.21"
path-clean = "1.0"
ravif = "0.13"
rayon = "1.11"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssimulacra2 = "0.5.1"
thiserror = "2.0"
walkdir = "2.5"
zip = "2.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
