[package]
name = "mf_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
mf_core = { path = "../mf_core" }
clap = { version = "4.5", features = ["derive"] }
zip = { version = "2.4", default-features = false, features = ["deflate", "time"] }
walkdir = "2.5"
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.11"
anyhow = "1.0"
thiserror = "2.0"
natord = "1.0"
