[package]
name = "mf_image"
version = "0.1.0"
edition = "2024"

[dependencies]
mf_core = { path = "../mf_core" }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["avif", "webp"] }
zip = "2.4"
ravif = "0.12"
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.11"
anyhow = "1.0"
thiserror = "2.0"
