[package]
name = "mf_image"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["avif", "webp"] }
indicatif = { version = "0.18", features = ["rayon"] }
mf_core = { path = "../mf_core" }

anyhow = "1.0"
natord = "1.0"
ravif = "0.12"
rayon = "1.11"
thiserror = "2.0"
zip = "2.4"
