[package]
name = "mf_main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "media-forge"
path = "src/main.rs"

[dependencies]
mf_image = { path = "../mf_image" }
mf_archive = { path = "../mf_archive" }
mf_video = { path = "../mf_video" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
