[package]
name = "mf_main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "media-forge"
path = "src/main.rs"

[dependencies]
mf_core = { path = "../mf_core" }
mf_image = { path = "../mf_image" }
mf_video = { path = "../mf_video" }

clap = { version = "4.5", features = ["derive"] }
mimalloc = { version = "0.1", features = ["v3"] }

anyhow = "1.0"
ctrlc = "3.4"
