[package]
name = "mf_video"
version = "0.1.0"
edition = "2024"

[dependencies]
mf_core = { path = "../mf_core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
walkdir = "2.5"
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.11"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.21"
num_cpus = "1.17"
