[package]
name = "mf_video"
version = "0.1.0"
edition = "2024"

[dependencies]
mf_core = { path = "../mf_core" }

clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.18", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
num_cpus = "1.17"
once_cell = "1.21"
rayon = "1.11"
regex = "1.12"
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
